--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
-    <link rel="syltesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <script src="js/app.js"></script>
@@ -60,5 +60,9 @@
         <li>Amazon Web Services  | Support Engineer | Seattle, WA | May 2018 - Present</li>
         <li>US Air Force         | Korean Linguist  | Okinawa, JP | Nov 2009 - Jan 2017</li>     
     </ul>
+
+    <p>
+        In terms of goals, I want to learn to code. Once I learn how, I want to use those skills to do machine learning and become a golf caddy using analytics from that process!
+    </p>
 </body>
 </html>
