--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
         In terms of goals, I want to learn to code. Once I learn how, I want to use those skills to do machine learning and become a golf caddy using analytics from that process!
     </p>
 
-    <img src="familyphoto.jpg">
+    <p>One interesting thing about me, is that I've been to some pretty cool places.
+        My Top 10 favorite places that I've visited or lived are: 
+        ><ol>
+            <li>Okinawa, Japan</li>
+            <li>Seoul, South Korea</li>
+            <li>Subic Bay, Philippines</li>
+            <li>Guam</li>
+            <li>Panama City, Panama</li>
+            <li>San Diego, California</li>
+            <li>Las Vegas, NV</li>
+            <li>Washington D.C.</li>
+            <li>Monterey, CA</li>
+            <li>Seattle, WA</li>
+        </ol>
+    </p>
+    <!-- <img src="familyphoto.jpg"> -->
 </body>
 </html>
