forgot to uncomment out my js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/app.js"></script>
     <img id="family" src="familyphoto.jpg" />
     <h1>Getting To Know Me</h1>
     
